--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -83,8 +83,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x86_64, armv7, aarch64]
-        version: [release-25c, release-27, devel, trunk]
+        ###arch: [x86_64, armv7, aarch64]
+        arch: [x86_64]
+        ###version: [release-25c, release-27, devel, trunk]
+        version: [release-27]
         os: [ubuntu-22.04, macos-13]
     env:
       ANDROID_API_LEVEL: 24
@@ -115,7 +117,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/swift-${{ matrix.version }}-android-${{ matrix.arch }}-*-sdk.tar.xz
-          key: ${{ matrix.version }}-${{ steps.version.outputs.latest }}-${{ matrix.arch }}-ndk-sdk
+          key: ${{ matrix.version }}-${{ steps.version.outputs.latest }}-${{ matrix.arch }}-ndk-${{ matrix.os }}-sdk
       - name: Clone
         uses: actions/checkout@v4
         with:
@@ -157,8 +159,7 @@ jobs:
           ${TOOLCHAIN}/bin/swift --version
 
       - name: Build Swift ${{ matrix.version }} Android SDK if not the latest
-        # build-script currently only works on ubuntu
-        if: ${{ (steps.cache-sdk.outputs.cache-hit != 'true') && (matrix.os == 'ubuntu-22.04') }}
+        if: ${{ steps.cache-sdk.outputs.cache-hit != 'true' }}
         env:
           SWIFT_TAG: ${{ steps.version.outputs.tag }}
           ANDROID_ARCH: ${{ matrix.arch }}
