--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -208,7 +208,7 @@ jobs:
 
           # additional patches for macOS
           if [[ ${{ matrix.os }} = 'macos'* ]]; then
-            NDK=${{ steps.setup-ndk.outputs.ndk-path }}
+            ANDROID_NDK=${{ steps.setup-ndk.outputs.ndk-path }}
 
             # LIBDISPATCH_RUNTIME_DIR=lib needed or libdispatch copy fails
             EXTRA_CMAKE_OPTIONS="-DLIBDISPATCH_RUNTIME_DIR=lib -DSWIFT_STDLIB_HAS_ASL=FALSE -DLLVM_NO_DEAD_STRIP=TRUE -DSWIFT_DISABLE_DEAD_STRIPPING=TRUE"
@@ -235,7 +235,7 @@ jobs:
 
           fi
 
-          ./swift/utils/build-script -RA --skip-build-cmark --build-llvm=0 --android --android-ndk $NDK --android-arch ${{ matrix.arch }} --android-api-level $ANDROID_API_LEVEL --build-swift-tools=0 --native-swift-tools-path=${TOOLCHAIN}/bin --native-clang-tools-path=${TOOLCHAIN}/bin --cross-compile-hosts=android-${{ matrix.arch }} --cross-compile-deps-path=$SDK --skip-local-build --build-swift-static-stdlib --xctest --skip-early-swift-driver --install-swift --install-libdispatch --install-foundation --install-xctest --install-destdir=$SDK --swift-install-components='clang-resource-dir-symlink;license;stdlib;sdk-overlay' --cross-compile-append-host-target-to-destdir=False -b -p --install-llbuild --sourcekit-lsp --skip-early-swiftsyntax --extra-cmake-options="${EXTRA_CMAKE_OPTIONS}"
+          ./swift/utils/build-script -RA --skip-build-cmark --build-llvm=0 --android --android-ndk $ANDROID_NDK --android-arch ${{ matrix.arch }} --android-api-level $ANDROID_API_LEVEL --build-swift-tools=0 --native-swift-tools-path=${TOOLCHAIN}/bin --native-clang-tools-path=${TOOLCHAIN}/bin --cross-compile-hosts=android-${{ matrix.arch }} --cross-compile-deps-path=$SDK --skip-local-build --build-swift-static-stdlib --xctest --skip-early-swift-driver --install-swift --install-libdispatch --install-foundation --install-xctest --install-destdir=$SDK --swift-install-components='clang-resource-dir-symlink;license;stdlib;sdk-overlay' --cross-compile-append-host-target-to-destdir=False -b -p --install-llbuild --sourcekit-lsp --skip-early-swiftsyntax --extra-cmake-options="${EXTRA_CMAKE_OPTIONS}"
 
           cp $ANDROID_NDK/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/$(echo ${{ matrix.arch }} | sed "s/v7//")-linux-android*/libc++_shared.so $SDK/usr/lib
           patchelf --set-rpath \$ORIGIN $SDK/usr/lib/swift/android/libdispatch.so
